# file-aggregator

./: .gitignore  README.md  pyproject.toml
custom_path/: agg.json
file_aggregator/: aggregator.py  cli.py  config.py  utils.py
samples/: combined.md  section1.md  section2.md
src/: aggregator.py  cli.py
tests/: test_config.py  test_utils.py
