[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-aggregator"
version = "0.1.0"
description = "A CLI-based file aggregator to organize system instructions for code-based AI agents."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
fag = "file_aggregator.cli:main"

[tool.setuptools]
packages = ["file_aggregator"]
